master-nginx/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: master-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  externalIPs:
    - 192.168.1.17
  selector:
    app: ingress-nginx
