master-nginx/popote-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: popote-service
    namespace: master-nginx
spec:
    type: ExternalName
    externalName: popote-service.popote.svc.cluster.local
