master-nginx/popote-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: popote-svc
    namespace: master-nginx
spec:
    type: ExternalName
    externalName: popote.popote.svc.cluster.local
    selector:
        app: master-ingress
