master-nginx/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-ingress
  namespace: master-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "k8sbfr.zapto.org"
    http:
      paths:
      - pathType: Prefix
        path: "/popote"
        backend:
          service:
            name: popote/popote-service
            port:
              name: popote-http
